# saas-footprint-analyzer

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
examples/: config.example.yaml
src/saas_footprint_analyzer/: __init__.py  audit.py  cli.py
src/saas_footprint_analyzer/config/: __init__.py  loader.py  schema.py  secrets.py
src/saas_footprint_analyzer/datadog/: __init__.py  auth.py  catalog.py  client.py  errors.py  metrics.py
src/saas_footprint_analyzer/discovery/: __init__.py  environments.py
src/saas_footprint_analyzer/models/: __init__.py  domain.py
src/saas_footprint_analyzer/normalizers/: __init__.py  features.py
src/saas_footprint_analyzer/reporters/: __init__.py  csv_reporter.py  json_reporter.py  markdown_reporter.py
src/saas_footprint_analyzer/scoring/: __init__.py  classifier.py  explain.py  strategies.py
src/saas_footprint_analyzer/utils/: __init__.py  time.py
tests/: test_classifier.py  test_config_loader.py  test_datadog_client.py  test_discovery.py  test_normalization.py  test_secrets.py
